template: Fix overlapping header at certain height.

--- a/templates/mark1/css/style.css
+++ b/templates/mark1/css/style.css
@@ -347,6 +347,10 @@ article.docs .footnotes {
         margin-top: 6.25rem;
     }
 
+    article.docs nav {
+        padding: 20px 30px 45px;
+    }
+
     article.docs figure img {
         max-height: 300px;
     }
